<resources>
    <string name="app_name">Mobile Anime List</string>

    <string name="fall_anime_title">Fall 2023 Anime</string>
    <string name="latest_review_title">Latest Episode Reviews</string>

    <string name="anime_title">Anime Title</string>
    <string name="anime_img_desc">An image of an anime</string>

    <string name="review_title">Anime Title</string>
    <string name="review_episode">Episode N</string>
    <string name="by_line">by &#032;</string>
    <string name="review_author">Author</string>
    <string name="review_score">4.5/5.0</string>
</resources>